welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: reassignment to val
if ((a=10 || b=10) || (a+b=10)) {
      ^